editor z-index fix

--- a/src/app/components/editor/editor.component.css
+++ b/src/app/components/editor/editor.component.css
@@ -1,8 +1,14 @@
 .hvj-markdown-element-editor {
     position: relative;
 }
+
 .hvj-markdown-element-editor .hvj-markdown-element-title {
     margin-bottom: -1px;
-    z-index: -1;
+    z-index: 0;
+    position: relative;
+}
+
+.hvj-markdown-element-editor .hvj-markdown-element-main {
+    z-index: 1;
     position: relative;
 }
